--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,10 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html xmlns:th="http://www.thymeleaf.org/">
 <head>
-    <meta charset="UTF-8">
-    <title>asdsfd</title>
+<meta charset="UTF-8">
+<title>首頁</title>
 </head>
 <body>
-asdfasdsa
+<div th:replace="~{layout/navbar}"></div>
+<div class="container">
+<h1>首頁</h1>
+</div>
 </body>
 </html>
