--- a/src/main/resources/templates/background/showUpload.html
+++ b/src/main/resources/templates/background/showUpload.html
@@ -17,17 +17,33 @@
 				</div>
 				<div class="card-body">
 					<span th:text="${product} ? ${product.id}"></span>
+					<br>
 					<span th:text="${product} ? ${product.sellermemberid}"></span>
+					<br>
 					<span th:text="${product} ? ${product.productname}"></span>
+					<br>
 					<span th:text="${product} ? ${product.price}"></span>
+					<br>
 					<span th:text="${product} ? ${product.specialprice}"></span>
+					<br>
 					<span th:text="${product} ? ${product.categoryid}"></span>
+					<br>
 					<span th:text="${product} ? ${product.quantity}"></span>
+					<br>
 					<span th:text="${product} ? ${product.description}"></span>
 					
 				
 				<div class="edit-place" style="display:flex">
-				
+				<form th:action="@{/back/edit}">
+				<input type="hidden" name="id" th:value="${product.id}" />
+				<input type="submit" class="btn btn-outline-danger btn-sm" value="編輯"/>
+				</form>
+
+				<form th:action="@{/back/delete}" method="post">
+				<input type="hidden" name="id" th:value="${product.id}" />
+				<input type="hidden" name="_method" th:value="delete" />
+				<input type="submit" class="btn btn-outline-danger btn-sm" value="刪除"/>
+				</form>
 				
 				</div>					
 			</div>
