--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -23,7 +23,7 @@
           <a class="nav-link" th:href="@{/member/register}">註冊</a>
         </li>
         <li class="nav-item">
-          <a class="nav-link" th:href="@{/member/memberLogin}">登入</a>
+          <a class="nav-link" th:href="@{/member/login}">登入</a>
         </li>
         <li class="nav-item">
           <a class="nav-link" th:href="@{/back/add}">上傳商品</a>
