--- a/src/main/resources/templates/member/loginOK.html
+++ b/src/main/resources/templates/member/loginOK.html
@@ -2,12 +2,12 @@
 <html xmlns:th="http://www.thymeleaf.org/">
 <head>
 <meta charset="UTF-8">
-<title>首頁</title>
+<title>LoginOK</title>
 </head>
 <body>
 <div th:replace="~{layout/navbar}"></div>
-<div class="container">
-<h1>首頁</h1>
-</div>
+	<div class="container">
+	<h1>登入成功</h1>
+	</div>
 </body>
 </html>
