--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <title>黑豆</title>
-<!-- <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" /> -->
+<link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
 </head>
 <body>
 	<nav class="navbar navbar-expand-lg bg-light">
@@ -23,10 +23,10 @@
 					<li class="nav-item">
           				<a class="nav-link" th:href="@{/product/productFind}">搜尋</a>
         			</li>
-        			<li class="nav-item">
-          				<a class="nav-link" th:href="@{/image/imageFind}">搜尋圖片</a>
+
+        		    <li class="nav-item">
+          				<a class="nav-link" th:href="@{/product/page}">商品預覽</a>
         			</li>
-        			
         			
 
 				</ul>
