--- a/src/main/resources/templates/product/productFindPage.html
+++ b/src/main/resources/templates/product/productFindPage.html
@@ -3,18 +3,30 @@
 <head>
 <meta charset="UTF-8">
 <title>搜尋商品</title>
+
+<style>
+
+.td{
+	margin: 5px;
+}
+
+
+</style>
 </head>
+
 <body>
 	<div th:replace="~{layout/navbar}"></div>
 	<div class="container">
 		<h1>搜尋商品</h1>
+		
+		
 		<div class="card">
 			<div class="card-header">輸入商品名稱</div>
 			<div class="card-body">
 				<form th:action="@{/product/productFind}" th:method="post">
 					<div class="input-group">
-						<label for="productname" class="form-label">select</label> <input
-							class="form-control" name="productname" id="productname" required />
+						<label for="productname" class="form-label">select</label> 
+						<input class="form-control" name="productname" id="productname" required />
 					</div>
 					<br>
 					<button class="btn btn-outline-primary" type="submit">送出</button>
@@ -22,6 +34,7 @@
 			</div>
 		</div>
 
+		
 		<div class="card">
 			<div class="card-header"></div>
 			<div class="card-body">
@@ -29,64 +42,37 @@
 					<table>
 						<thead>
 							<tr>
-								<th>產品ID</th>
-								<th>銷售員 ID</th>
+								<th>產品圖片</th>
 								<th>產品名稱</th>
 								<th>價格</th>
 								<th>特價</th>
-								<th>類別</th>
-								<th>數量</th>
-								<th>描述</th>
 							</tr>
 						</thead>
 						<tbody>
-							<tr th:each="product : ${products}">
-								<td th:text="${product.id}"></td>
-								<td th:text="${product.sellermemberid.memberimgpath}"></td>
+							<tr th:each="product : ${products}">												
+								<td><img width="50px"
+								th:src="'https://imgur.com/' + ${product.productImage[0].imagepath} + '.jpg'"/></td> 
 								<td th:text="${product.productname}"></td>
 								<td th:text="${product.price}"></td>
-								<td th:text="${product.specialprice}"></td>
-								<td th:text="${product.categoryid.categoryname}"></td>
-								<td th:text="${product.quantity}"></td>
-								<td th:text="${product.description}"></td>
+								<td th:text="${product.specialprice}"></td>							
 							</tr>
 					
 						</tbody>
 					</table>
+				
+								
 				</div>
 				<div th:unless="${products}">
 					<p>No products found.</p>
 				</div>
+								
+				
 			</div>
-
 		</div>
 		
 		
-<!-- 		<div class="card"> -->
-<!--        	 <div class="card-header"></div> -->
-<!--        	 <div class="card-body"> -->
 
-<!-- 			<table> -->
-<!-- 				<tr th:each="images : ${images}"> -->
-<!-- 					<img th:src="'https://imgur.com/' + ${images.imagepath} +'.jpg'" class="card-header" alt="404"> -->
-<!-- 				</tr> -->
-<!-- 			</table>		 -->
-<!--        	 	<div th:if="${products}"> -->
-       	 		
-<!--        	 		<table> -->
-<!--        	 			<tbody>  -->
-<!--        	 				<tr th:each="product : ${products}"> -->
-<!-- 							<td th:text="${product.productname}"></td>	 -->
-<!-- 							<td th:text="${product.price}"></td>	 -->
-<!-- 							<td th:text="${product.specialprice}"></td>				 -->
-<!-- 						</tr>					 -->
-<!-- 					</tbody>  -->
-<!-- 				</table> -->
-<!-- 			</div> -->
-<!-- 			<br>			 -->
-<!-- 			<div th:unless="${products}"> -->
-<!-- 				<p>No products found.</p> -->
-<!-- 			</div> -->
+		
 			
 			
 		</div>
