--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -3,60 +3,18 @@
 
 <head>
   <meta charset="UTF-8">
-  <title>MyApp</title>
-  <link th:href="@{/css/bootstrap.min.css}" rel="stylesheet" />
+  <title>首頁</title>
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
 
 <body>
-  <nav class="navbar navbar-expand-lg bg-light">
-    <div class="container-fluid">
-      <a class="navbar-brand" th:href="@{/}">MyApp</a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav">
-          <li class="nav-item">
-            <a class="nav-link active" aria-current="page" th:href="@{/}">Home</a>
-          </li>
+<div th:replace="~{layout/navbar}"></div>
 
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/member/memberRe}">黑豆皮註冊</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" th:href="@{/member/memberLogin}">登入</a>
-          </li>
+<div class="container">
+  <h1>首頁</h1>
+</div>
 
-          <li class="nav-item">
-            <a class="nav-link disabled">Disabled</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-
-  <script th:src="@{/js/bootstrap.bundle.min.js}"></script>
-  <title>首頁</title>
-  </head>
-
-  <body>
-    <div th:replace="~{layout/navbar}"></div>
-    <div class="container">
-      <h1>首頁</h1>
-    </div>
-    <title>首頁</title>
-    </head>
-
-    <body>
-      <title>首頁</title>
-      </head>
-
-      <body>
-        <div th:replace="~{layout/navbar}"></div>
-        <div class="container">
-          <h1>首頁</h1>
-        </div>
-      </body>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+</body>
 
 </html>
