--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -25,7 +25,7 @@
                         <li><a class="dropdown-item" th:href="@{/member/register}">註冊</a></li>
                         <li><a class="dropdown-item" th:href="@{/member/login}">登入</a></li>
                         <li><a class="dropdown-item" th:href="@{/back/add}">上傳商品</a></li>
-                        <li><a class="dropdown-item" th:href="@{/back/show}">查詢商品</a></li>
+                        <li><a class="dropdown-item" th:href="@{/back/edit}">查詢商品</a></li>
                         <li><a class="dropdown-item" th:href="@{/product/productFind}">搜尋</a></li>
                         <li><a class="dropdown-item" th:href="@{/product/page}">商品預覽</a></li>
                         <li><a class="dropdown-item" th:href="@{/product/productFind}">商品查詢</a></li>
