--- a/src/main/resources/templates/background/showUpload.html
+++ b/src/main/resources/templates/background/showUpload.html
@@ -26,19 +26,19 @@
 					<span th:text="${product.productid}"></span>
 				 -->
 					<br>
-					<span th:text="${product.sellermemberid.id}"></span>
+					<span th:text="${product :product.sellermemberid.id}"></span>
 					<br>
-					<span th:text="${product.productname}"></span>
+					<span th:text="${product :product.productname}"></span>
 					<br>
-					<span th:text="${product.price}"></span>
+					<span th:text="${product :product.price}"></span>
 					<br>
-					<span th:text="${product.specialprice}"></span>
+					<span th:text="${product :product.specialprice}"></span>
 					<br>
-					<span th:text="${product.categoryid.id}"></span>
+					<span th:text="${product :product.categoryid.id}"></span>
 					<br>
-					<span th:text="${product.quantity}"></span>
+					<span th:text="${product :product.quantity}"></span>
 					<br>
-					<span th:text="${product.description}"></span>
+					<span th:text="${product :product.description}"></span>
 					
 			
 				
