--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -30,6 +30,7 @@
                         <li><a class="dropdown-item" th:href="@{/product/page}">商品預覽</a></li>
                         <li><a class="dropdown-item" th:href="@{/product/productFind}">商品查詢</a></li>
                         <li><a class="dropdown-item" th:href="@{/orders/orderBase}">訂單查詢</a></li>
+                        <li><a class="dropdown-item" th:href="@{/shoppingcart/viewcart}">查看購物車</a></li>
                         <li><a class="dropdown-item" th:href="@{/shoppingcart/view}">購物車</a></li>
                         <li><a class="dropdown-item" th:href="@{/shoppingcart/addProduct?pid=6}">新增商品至購物車</a></li>
                         
