google登入 半成形

--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -22,7 +22,7 @@
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" th:href="@{/member/memberRe}">黑豆皮註冊</a></li>
-                        <li><a class="dropdown-item" th:href="@{/member/register}">註冊</a></li>
+                        <li><a class="dropdown-item" th:href="@{/member/post}">註冊</a></li>
                         <li><a class="dropdown-item" th:href="@{/member/login}">登入</a></li>
                         <li><a class="dropdown-item" th:href="@{/back/add}">上傳商品</a></li>
                         <li><a class="dropdown-item" th:href="@{/back/show}">查詢商品</a></li>
