--- a/src/main/resources/templates/layout/navbar.html
+++ b/src/main/resources/templates/layout/navbar.html
@@ -30,7 +30,7 @@
                         <li><a class="dropdown-item" th:href="@{/product/page}">商品預覽</a></li>
                         <li><a class="dropdown-item" th:href="@{/product/productFind}">商品查詢</a></li>
                         <li><a class="dropdown-item" th:href="@{/orders/orderBase}">訂單查詢</a></li>
-                        <li><a class="dropdown-item" th:href="@{/shoppingcart/viewCart}">檢視購物車</a></li>
+                        <li><a class="dropdown-item" th:href="@{/api/shoppingcart/cart}">檢視購物車</a></li>
                         <li><a class="dropdown-item" th:href="@{/shoppingcart/view}">購物車</a></li>
                         <li><a class="dropdown-item disabled">Disabled</a></li>
                     </ul>
